--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="This site is a test site.">
     <title>Creative Design</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
@@ -88,7 +89,7 @@
                         <li>CSS3</li>
                         <li>Ai</li>
                     </ul>
-                    <a href="#" class="projects-btn">Projects</a>
+                    <a href="#none" class="projects-btn">Projects</a>
                     <div class="story-btn" title="My Story">
                         <div class="story-btn-line"></div>
                     </div>
@@ -108,7 +109,7 @@
                         <li>CSS3</li>
                         <li>Inkscape</li>
                     </ul>
-                    <a href="#" class="projects-btn">Projects</a>
+                    <a href="#none" class="projects-btn">Projects</a>
                     <div class="story-btn" title="My Story">
                         <div class="story-btn-line"></div>
                     </div>
@@ -128,7 +129,7 @@
                         <li>MongoDB</li>
                         <li>Python</li>
                     </ul>
-                    <a href="#" class="projects-btn">Projects</a>
+                    <a href="#none" class="projects-btn">Projects</a>
                     <div class="story-btn" title="My Story">
                         <div class="story-btn-line"></div>
                     </div>
@@ -146,7 +147,7 @@
             <h1 class="section-heading">Contact</h1>
             <div class="form-container">
                 <img src="images/form-img.png" class="form-img">
-                <form class="contact-form">
+                <form class="contact-form" action="#none">
                     <input type="text" placeholder="Your Name">
                     <input type="email" placeholder="Your Email">
                     <textarea placeholder="Your Message"></textarea>
@@ -154,7 +155,7 @@
                 </form>
             </div>
             <p class="copyright">
-                Copyright &copy; CodeAndCreate All Rights Reserved
+                Copyright &copy; TestSite All Rights Reserved
             </p>
         </section>
         <!-- end of section 4 -->
